@@ -15,6 +15,7 @@ PHP                                                                        NEWS
     on error.
 - Changed get_headers() to retrieve headers also from non-200 responses. (Ilia)
 - Changed get_headers() to use the default context. (Ilia)
+- Changed reflection constants to be prefixed with IS_. (Johannes)
 - Added a check for special characters in the session name. (Ilia)
 - Added "consumed" stream filter. (Marcus)
 - Added new mysqli constants for BIT and NEW_DECIMAL field types:
